@@ -7,14 +7,12 @@
  */
 package dust.service.core.util;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
-
 import javax.crypto.Cipher;
 import javax.crypto.KeyGenerator;
 import java.io.UnsupportedEncodingException;
 import java.security.Key;
 import java.security.SecureRandom;
+import java.util.Base64;
 
 /**
  * DES加密算法工具类
@@ -43,13 +41,12 @@ public class DESUtils {
      * @return
      */
     public static String getEncryptString(String str) {
-        BASE64Encoder base64encoder = new BASE64Encoder();
         try {
             byte[] bytes = str.getBytes(CHARSETNAME);
             Cipher cipher = Cipher.getInstance(ALGORITHM);
             cipher.init(Cipher.ENCRYPT_MODE, key);
             byte[] doFinal = cipher.doFinal(bytes);
-            return base64encoder.encode(doFinal);
+            return Base64.getEncoder().encodeToString(doFinal);
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
@@ -61,9 +58,8 @@ public class DESUtils {
      * @return
      */
     public static String getDecryptString(String str) {
-        BASE64Decoder base64decoder = new BASE64Decoder();
         try {
-            byte[] bytes = base64decoder.decodeBuffer(str);
+            byte[] bytes = Base64.getDecoder().decode(str);
             Cipher cipher = Cipher.getInstance(ALGORITHM);
             cipher.init(Cipher.DECRYPT_MODE, key);
             byte[] doFinal = cipher.doFinal(bytes);
@@ -83,7 +79,7 @@ public class DESUtils {
             e.printStackTrace();
         }
         if (b != null) {
-            s = new BASE64Encoder().encode(b);
+            s = Base64.getEncoder().encodeToString(b);
         }
         return s;
     }
@@ -93,9 +89,8 @@ public class DESUtils {
         byte[] b;
         String result = null;
         if (s != null) {
-            BASE64Decoder decoder = new BASE64Decoder();
             try {
-                b = decoder.decodeBuffer(s);
+                b = Base64.getDecoder().decode(s);
                 result = new String(b, "utf-8");
             } catch (Exception e) {
                 e.printStackTrace();
